	  for a smaller libntfs but results in ntfs_mount() always returning
	  error with errno set to ENOTSUP.  You need to use ntfs_device_mount()
	  instead.  This only makes sense with "make libs" and when an
	  application linking statically against libntfs provides its own
	  device io operations.  (Feature requested by Christophe Grenier.)

23/01/2004 - 1.8.4 - Memory leak fixes.
	- Fix memory leaks in libntfs/dir.c::ntfs_inode_lookup_by_name(),
	  libntfs/dir.c::ntfs_readdir() and libntfs/attrib.c::ntfs_attr_open().
	  Thanks to Christophe Grenier and valgrind for finding them.

19/01/2004 - 1.8.3 - Lots of small fixes.
	- Update ntfsinfo (Matthew J. Fanto, me)
	- Add new API attrib.[hc]:ntfs_compressed_attr_pread(). NOTE: You want
	  to use ntfs_attr_pread() instead which will transparently read the
	  compressed attribute and return the decompressed data.
	- Improve mkntfs linux/major.h use so should work on newer glibc.
	- Fix silly bug in ntfs_attr_size_bounds_check() where unbounded
	  attributes were handled completely wrong. (Thanks to Szaka for
	  spotting this.)
	- Fix wrong print modified %L intead of %ll everywhere. (Szaka, me)
	- More Cygwin fixes. (Lode Leroy)
	- Switch build files to ones generated by current SuSE 9.0 (i.e. I ran
	  ./autogen.sh on SuSE 9.0 as I will be using SuSE as my desktop from
	  now on).

07/01/2004 - 1.8.2 - Make ntfsprogs work on FreeBSD.
	- Add compatibility for building on FreeBSD. (Christophe Grenier)
	- Add new compile target "make libs" which only compiles libntfs.
	- Compile fixes for DJGPP. (Chrisophe Grenier, me)
	- Note: DJGPP only works with "make libs". not "make" due to absence
	  of getopt.h, getopt_long(), snprintf(), and snprintf(). getopt() does
	  exist (in unistd.h) so we could switch to that if we wanted.
	- Enable lots of compiler warnings in maintainer mode and fix all
	  warnings from libntfs.
	- Fix memory deallocation bug in mft.c spotted by the additional
	  warnings.
