@@ -23,6 +23,8 @@ xx/xx/2004 - 1.8.5 - WIP
 	  instead.  This only makes sense with "make libs" and when an
 	  application linking statically against libntfs provides its own
 	  device io operations.  (Feature requested by Christophe Grenier.)
+	- Fix a duplicated free() in mkntfs. (Andras Erdei)
+	- Fix option display in mkntfs. (Andras Erdei)
 
 23/01/2004 - 1.8.4 - Memory leak fixes.
 	- Fix memory leaks in libntfs/dir.c::ntfs_inode_lookup_by_name(),
